compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__constructor_fn.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Person { Person(name: String) }\n\nfn new(name: String) -> Person {\n  let constructor_fn = Person;\n  constructor_fn(name)\n}\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

class Person;

gleam::Ref<::my::module::Person> new(gleam::Ref<gleam::String> name);

class Person {
public:
  Person(gleam::Ref<gleam::String> name) : m$name(name) {}
  gleam::Ref<gleam::String> name() const { return m$name; }
private:
  gleam::Ref<gleam::String> m$name;
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

gleam::Ref<::my::module::Person> new(gleam::Ref<gleam::String> name) {
  gleam::Function<gleam::Ref<::my::module::Person>, gleam::Ref<gleam::String>> constructor_fn = gleam::WrappedConstructor<::my::module::Person, gleam::Ref<gleam::String>>();
  return constructor_fn(name);
};

} // namespace my
} // namespace module

