compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__generic_multiple_variant.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Either(left_type, right_type) {\n  Left(v: left_type)\n  Right(v: right_type)\n}\n\npub fn make_left(v: left) {\n  Left(v)\n}\n\npub fn make_right(v: right) {\n  Right(v)\n}\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

template <typename T$8, typename T$9>
struct Either;
template <typename T$8, typename T$9>
struct Either$Left;
template <typename T$8, typename T$9>
struct Either$Right;

template <typename T$10, typename T$15>
gleam::Ref<::my::module::Either<T$10, T$15>> make_left(T$10 v);

template <typename T$12, typename T$17>
gleam::Ref<::my::module::Either<T$17, T$12>> make_right(T$12 v);

template <typename T$8, typename T$9>
struct Either {
  explicit Either() {}
  virtual ~Either() = default;
  
};

template <typename T$8, typename T$9>
struct Left$Either : public Either<T$8, T$9> {
  explicit Left$Either(T$8 v) : Either<T$8, T$9>(), v(v) {}
  
  T$8 v;
};

template <typename T$8, typename T$9>
struct Right$Either : public Either<T$8, T$9> {
  explicit Right$Either(T$9 v) : Either<T$8, T$9>(), v(v) {}
  
  T$9 v;
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

template <typename T$10, typename T$15>
gleam::Ref<::my::module::Either<T$10, T$15>> make_left(T$10 v) {
  return gleam::MakeRef<::my::module::Either$Left<T$10, T$15>>(v);
};

template <typename T$12, typename T$17>
gleam::Ref<::my::module::Either<T$17, T$12>> make_right(T$12 v) {
  return gleam::MakeRef<::my::module::Either$Right<T$17, T$12>>(v);
};

} // namespace my
} // namespace module

