compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__generic_single_variant.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Box(inner_type) {\n  Box(inner: inner_type)\n}\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

class Box;

class Box {
public:
  Box(T$8 inner) : m$inner(inner) {}
  T$8 inner() const { return m$inner; }
private:
  T$8 m$inner;
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {



} // namespace my
} // namespace module

