compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__multiple_variants.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type User {\n  LoggedIn(name: String)\n  Guest\n}\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

class User;

class LoggedIn;

class Guest;

class User {
public:
  User() {}
  virtual ~User() {}
  
private:
  
};

class LoggedIn : public User {
public:
  LoggedIn(gleam::String name) : User(), m$name(name) {}
  gleam::String name() const { return m$name; }
private:
  gleam::String m$name;
};

class Guest : public User {
public:
  Guest() : User() {}
  
private:
  
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {



} // namespace my
} // namespace module

