compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__single_variant.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Person { Person(name: String, age: Int) }\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

class Person;

class Person {
public:
  Person(gleam::Ref<gleam::String> name, int64_t age) : m$name(name), m$age(age) {}
  gleam::Ref<gleam::String> name() const { return m$name; }
  int64_t age() const { return m$age; }
private:
  gleam::Ref<gleam::String> m$name;
  int64_t m$age;
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {



} // namespace my
} // namespace module

