compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__singleton.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Void { Void }\n\nfn noop() -> Void {\n  let v = Void;\n  v\n}\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

struct Void;
struct Void$Void;

gleam::Ref<::my::module::Void> noop();

struct Void {
  explicit Void() {}
  virtual ~Void() = default;
  
};

struct Void$Void : public Void {
  explicit Void$Void() : Void() {}
  
  
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

gleam::Ref<::my::module::Void> noop() {
  gleam::Ref<::my::module::Void> v = gleam::MakeRef<::my::module::Void$Void>();
  return v;
};

} // namespace my
} // namespace module

