compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__records__unnamed_fields.snap
---
source: compiler-core/src/cplusplus/tests/records.rs
expression: "\npub type Ip { Ip(String) }\n"
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

class Ip;

class Ip {
public:
  Ip(gleam::Ref<gleam::String> x$0) : m$0(x$0) {}
  gleam::Ref<gleam::String> x$0() const { return m$0; }
private:
  gleam::Ref<gleam::String> m$0;
};

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {



} // namespace my
} // namespace module

